# gret

./: .clang-format  .gitignore  .ignore  Cargo.toml  README.md  TODOS.md  add_to_path.sh  build.rs  copy.rs  example_install.sh  makefile  my_add_to_path  options.md
.github/workflows/: cr.yml
benchmarks/: bench  times
completions/: _gret  _gret.ps1  _todo  _todo.ps1  gret.bash  gret.elv  gret.fish  todo.bash  todo.elv  todo.fish
example/: .ignore  ignore_this.txt  in.txt  link  linked.txt
example/d1/: in1.txt
example/d1/d2/: in2.txt
example/directory/descendant/: ignores.txt  nice.txt
formats/: Cargo.toml
formats/src/: lib.rs
src/: arg_parser.rs  args.rs  command.rs  errors.rs  formats.rs  ignores_parser.rs  logger.rs  main.rs  menu.rs  printer.rs  searcher.rs
test/: in.txt  link_to_nothing
test/none_here_long_folder_name/none/: none.txt
