[package]
name = "gret"
version = "0.1.0"
edition = "2021"
build = "build.rs"
license = "Unlicense"
repository = "https://github.com/4imothy/gret"
homepage = "https://github.com/4imothy/gret"
keywords = ["regex", "grep", "ripgrep", "search", "pattern"]
categories = ["command-line-utilities", "text-processing"]
readme = "README.md"
description = "gret is a command line tool to search for patterns and show matches in a tree structure"
documentation = "https://github.com/4imothy/gret/blob/main/options.md"
authors = ["Timothy Cronin"]

[[bin]]
path = "src/main.rs"
name = "gret"

[dependencies]
ignore = "0.4.20"
regex = "1.8.3"
lazy_static = "1.4.0"
clap = "4.3.0"
memchr = "2.5.0"
atty = "0.2.14"

[build-dependencies]
clap = "4.3.0"
lazy_static = "1.4.0"
clap_complete = "4.3.0"
