[package]
name = "gret"
version = "0.1.2"
edition = "2021"
build = "build.rs"
license = "CC-BY-4.0"
repository = "https://github.com/4imothy/gret"
homepage = "https://github.com/4imothy/gret"
keywords = ["regex", "grep", "ripgrep", "search", "pattern"]
categories = ["command-line-utilities", "text-processing"]
readme = "README.md"
description = "gret is a command line tool to search for patterns and show matches in a tree structure"
documentation = "https://github.com/4imothy/gret/blob/main/options.md"
authors = ["Timothy Cronin"]

[[bin]]
path = "src/main.rs"
name = "gret"

[dependencies]
ignore = "0.4.21"
regex = "1.10.2"
lazy_static = "1.4.0"
clap = "4.4.11"
memchr = "2.5.0"
atty = "0.2.14"
crossterm = "0.27.0"
signal-hook = "0.3.17"

[build-dependencies]
clap = "4.3.0"
lazy_static = "1.4.0"
clap_complete = "4.3.0"
